Updated constructors and formatting